--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[נחמה וחצי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ננו שלי ואני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215181259035" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215184141718" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215182042755" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215184254359" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -15644,12 +15644,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181118131210478" modified="20190219162340913" tags="[[כאן בגטו]] אימהות ילדים [[ילדים חד הוריים]]" title="ננו שלי ואני">
+<div created="20181118131210478" modified="20200215184318337" tags="[[כאן בגטו]] אימהות ילדים [[ילדים חד הוריים]]" title="ננו שלי ואני">
 <pre>[img[pictures/nano-ve-ani.jpg]]
 
 !!![[תומר]]:
 
-את יום הולדת שנה של ננו שלי המתוקה, חגגנו באחד בנובמבר בחצר הורי ובלי אימא שפי, שלילה קודם עזבה והמריאה לאמריקה. ידעתי שהיא אמורה לצאת עם חברה לבילוי באותו ערב, ולהישאר ללון אצלה, אבל בבוקר כשקמתי חיכה לי מייל, אותו שלחה רגע לפני ההמראה. היא כתבה שהיא לא יכולה יותר. עברו כמעט שלושה שבועות מאז. טכנית אני מאורגן, אך לבי שבור על ננו שלי הקטנה שמחפשת את אימא.</pre>
+את יום הולדת שנה של ננו שלי המתוקה, חגגנו באחד בנובמבר בחצר הורי ובלי אימא שפי, שלילה קודם עזבה והמריאה לאמריקה. ידעתי שהיא אמורה לצאת עם חברה לבילוי באותו ערב, ולהישאר ללון אצלה, אבל בבוקר כשקמתי חיכה לי מייל, אותו שלחה רגע לפני ההמראה. היא כתבה שהיא לא יכולה יותר. עברו כמעט שלושה שבועות מאז. טכנית אני מאורגן, אך לבי שבור על ננו שלי הקטנה שמחפשת את אימא.
+
+&lt;&lt;englink [[Nano and I]]&gt;&gt;
+</pre>
 </div>
 <div created="20171026185459428" modified="20200208130222914" tags="[[משפחת באומן]] [[אני רוצה להתנצל]] בתים [[בדרך לאן שהוא]]" title="נסענו לאזכרה של אימא">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
