--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>My Mother</li>
 
+<li>Nano and I</li>
+
 <li>Nehama Vahetzi</li>
 
 <li>Northern Exposure</li>
@@ -8388,7 +8390,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Nehama Vahetzi]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Nano and I]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8650,7 +8652,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215182004456" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215184435742" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9413,6 +9415,17 @@ It's difficult for me at this point of life to think about relations.
 
 
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
+</div>
+<div created="20200215184111637" modified="20200215184505280" tags="Mothers [[Here in the Ghetto]] Children [[Single parent children]]" title="Nano and I">
+<pre>
+[img[pictures/nano-ve-ani.jpg]]
+
+!!![[Tomer]]:
+
+We celebrated the first birthday of my sweet Nano on November 1st at my parent's garden without mom Sheffi, who on the former night left and flew to America. I knew that she was supposed to go out with a friend for a hang that evening, and stay at her place for the night, but when I woke up in the morning an email had awaited for me, which she sent a moment before the take off. She wrote that she can't do it anymore. Almost three weeks have passed since then. I'm technically organized, but my heart aches for my little Nano who's looking for her mother.
+
+ &lt;&lt;heblink [[ננו שלי ואני]]&gt;&gt;
+</pre>
 </div>
 <div created="20200215181227245" modified="20200215182344292" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
 <pre>
