--- a/english.html
+++ b/english.html
@@ -437,6 +437,8 @@ Error message and password prompt
 
 <li>Puaa</li>
 
+<li>Public Transportation</li>
+
 <li>Radio epgb</li>
 
 <li>Recipes</li>
@@ -8390,7 +8392,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Nano and I]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Public Transportation]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8652,7 +8654,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215184435742" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215190038568" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9561,6 +9563,20 @@ It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.
   &lt;&lt;heblink [[פועה]]&gt;&gt;
 
 
+
+</pre>
+</div>
+<div created="20200215185602226" modified="20200215190055653" tags="[[On the road to somewhere]]" title="Public Transportation">
+<pre>
+[img[pictures/tachbura-ziburit.jpg]]
+
+!!![[Yoyo]]:
+
+Sometimes ideals become deeds, and sometimes deeds become ideals.
+
+For example, I'm proud to say that I don't own a private car, but instead I do public transportation or hitchhiking.
+
+ &lt;&lt;heblink [[תחבורה ציבורית]]&gt;&gt;
 
 </pre>
 </div>
