--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ננו שלי ואני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[תחבורה ציבורית]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215184141718" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215185618597" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215184254359" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215190127455" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -18724,14 +18724,18 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170817170010531" modified="20200208130457048" tags="[[בדרך לאן שהוא]]" title="תחבורה ציבורית">
+<div created="20170817170010531" modified="20200215190154092" tags="[[בדרך לאן שהוא]]" title="תחבורה ציבורית">
 <pre>[img[pictures/tachbura-ziburit.jpg]]
 
 !!![[יויו]]:
 
 לפעמים אידאלים הופכים למעשים, ולפעמים מעשים הופכים לאידאלים
 
-למשל, אני גאה לומר שאינני אוחז ברכב פרטי, כי אם עושה תחב&quot;צ או טרמפים</pre>
+למשל, אני גאה לומר שאינני אוחז ברכב פרטי, כי אם עושה תחב&quot;צ או טרמפים
+
+&lt;&lt;englink [[Public Transportation]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170405141252134" modified="20171029224532235" tags="[[חלומות שחלמנו]]" title="תיקי גב לקניות שדןדן ויויו הכינו">
 <pre>[img[pictures/tik-kniyot.jpg]]
