--- a/english.html
+++ b/english.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>Alfred</li>
 
+<li>An open ending</li>
+
 <li>Angelic</li>
 
 <li>Assuming and Preserving</li>
@@ -471,8 +473,6 @@ Error message and password prompt
 
 <li>The Couscous</li>
 
-<li>The end stays open</li>
-
 <li>The first assembly</li>
 
 <li>The global village</li>
@@ -512,6 +512,8 @@ Error message and password prompt
 <li>TV Series</li>
 
 <li>Vincent Van Gogh</li>
+
+<li>We Went to Mom's Memorial</li>
 
 <li>Wes Anderson</li>
 
@@ -8392,7 +8394,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Public Transportation]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8412,7 +8414,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215180609342" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215191750325" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8654,7 +8656,15 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215190038568" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215114358738" modified="20200215192634430" tags="[[The Sopranos]] TV [[TV Series]] [[On the road to somewhere]]" title="An open ending">
+<pre>[img[pictures/sof-hasopranos.jpg]]
+
+ &lt;&lt;heblink [[הסוף נשאר פתוח]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215155125827" modified="20200215191327700" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9767,14 +9777,6 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200215114358738" modified="20200215114518763" tags="[[The Sopranos]] TV [[TV Series]] [[On the road to somewhere]]" title="The end stays open">
-<pre>[img[pictures/sof-hasopranos.jpg]]
-
- &lt;&lt;heblink [[הסוף נשאר פתוח]]&gt;&gt;
-
-
-</pre>
-</div>
 <div created="20200202171450477" modified="20200212175928821" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
 
@@ -9981,6 +9983,22 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
+</div>
+<div created="20200215190802119" modified="20200215191412120" tags="[[The Baumans]] Mothers Houses [[I would like to apologize]] [[On the road to somewhere]]" title="We Went to Mom's Memorial">
+<pre>
+[img[pictures/haazkara-shel-ima.jpg]] 
+
+!!![[Gura]]:
+
+[[Yoyo]] and I did a five day tour (including waiting in insanely expensive airports who were in constructions) in honor of the third anniversary of our mother's death. 
+
+It was fun in our [[parents' house|Papa Yoel]]. We both behaved very well, I managed not to get angry at all. Dad and Tirza also behaved. Our sisters were cute (except for Nadia),
+ 
+Only in the taxi on the way back to the airport, the driver, who figured we live in Paris, started to criticize us, and that made my blood boil. Yoyo held me and told me quietly that today taxi drivers hold cameras in their taxis, so I shut up.  When we arrived to the airport I quickly came out of the taxi and moved away from it. Yoyo took out the suitcases. I was able to hear the driver yelling at me &quot;everything's good, sweetheart&quot;.
+
+
+ &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
+</pre>
 </div>
 <div created="20200213175731975" modified="20200213175948693" tags="[[Outer sisters]] Films" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
