--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[תחבורה ציבורית]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסוף נשאר פתוח]] [[נסענו לאזכרה של אימא]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215185618597" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215191828433" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215190127455" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215191433717" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -12576,7 +12576,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170923082302700" modified="20200215114639324" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]]" title="הסוף נשאר פתוח">
+<div created="20170923082302700" modified="20200215192611198" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]]" title="הסוף נשאר פתוח">
 <pre>[img[pictures/sof-hasopranos.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12593,7 +12593,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 הבוקר אני חושבת, בכל אחד מאיתנו [[שוכן מאפיונר קטן ומסוכן, נפוליאון החזיר, ( בעיקר בדקה 3:40 של הוידאו ואילך), שלא רואה בעיניים, גם כשהוא מלא בתובנות|https://www.youtube.com/watch?v=4zFM00-rOMo]], ושהסוף הסגור הוא, [[שג'יימס גנדולפיני|ג'יימס גנדולפיני]] האהוב כבר לא איתנו.
 
-&lt;&lt;englink [[The end stays open]]&gt;&gt;</pre>
+&lt;&lt;englink [[An open ending]]&gt;&gt;</pre>
 </div>
 <div created="20170826115226554" modified="20200213162746383" tags="סדרות אימהות טלוויזיה מטבחים" title="הסופרנוס">
 <pre>[img[pictures/the-sopranos.jpg]]
@@ -15654,7 +15654,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Nano and I]]&gt;&gt;
 </pre>
 </div>
-<div created="20171026185459428" modified="20200208130222914" tags="[[משפחת באומן]] [[אני רוצה להתנצל]] בתים [[בדרך לאן שהוא]]" title="נסענו לאזכרה של אימא">
+<div created="20171026185459428" modified="20200215191503902" tags="[[משפחת באומן]] [[אני רוצה להתנצל]] בתים [[בדרך לאן שהוא]]" title="נסענו לאזכרה של אימא">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
 
 !!![[גורה]]:
@@ -15664,6 +15664,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 בבית של [[ההורים|משפחת באומן]] היה כיף. שנינו התנהגנו מאד יפה, הצלחתי לא להתרגז כלל. אבא ותרצה התנהגו יפה גם. אחיותינו היו חמודות (חוץ מנדיה).
 
 רק במונית בדרך לשדה התעופה, הנהג, שהבין שאנו גרים בפריז, התחיל להעביר עלינו בקורת והדם עלה לי לראש. יויו החזיק אותי ואמר לי בשקט, שהיום נהגי המוניות מחזיקים מצלמה במונית, אז סתמתי. כשהגענו לשדה התעופה יצאתי מהר והתרחקתי מהמונית. יויו הוציא את המזוודות. הספקתי לשמוע את הנהג צועק לי &quot;הכל טוב, חמודה&quot;. 
+
+&lt;&lt;englink [[We Went to Mom's Memorial]]&gt;&gt;
 
 
 </pre>
