--- a/english.html
+++ b/english.html
@@ -345,6 +345,8 @@ Error message and password prompt
 
 <li>HH</li>
 
+<li>Hora</li>
+
 <li>Horses to Glue</li>
 
 <li>Houses</li>
@@ -8664,7 +8666,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215191327700" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215193742162" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9067,6 +9069,21 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[HH]]&gt;&gt;
 
+
+
+</pre>
+</div>
+<div created="20200215192758642" modified="20200215194208454" tags="[[Iry claims]] [[How many songs can you even invent at all]] Music" title="Hora">
+<pre>
+[img[pictures/hora.jpg]]
+
+!!![[Iry]]:
+
+The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|https://en.wikipedia.org/wiki/Circle_dance]].
+
+&quot;In a circle- there is no first, there is no last&quot; is a sentence I remember I've once heard, but I couldn't find its source.
+
+  &lt;&lt;heblink [[הורה]]&gt;&gt;
 
 
 </pre>
