--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסוף נשאר פתוח]] [[נסענו לאזכרה של אימא]]" title="$:/StoryList">
+<div list="הורה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215191828433" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215192844123" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215191433717" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215193600468" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -12242,14 +12242,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170807163816985" modified="20200212143753919" tags="[[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="הורה">
+<div created="20170807163816985" modified="20200215193639976" tags="[[אירי טוענת]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="הורה">
 <pre>[img[pictures/hora.jpg]]
 
 !!![[אירי]]:
 
 את [[ההורה|https://en.wikipedia.org/wiki/Hora_(dance)]] רוקדים על קו [[המעגל|https://en.wikipedia.org/wiki/Circle_dance]].
 
-&quot;במעגל - אין ראשון ואין אחרון&quot;, הוא משפט שאני זוכרת ששמעתי פעם, אך לא מצאתי לו סימוכין.</pre>
+&quot;במעגל - אין ראשון ואין אחרון&quot;, הוא משפט שאני זוכרת ששמעתי פעם, אך לא מצאתי לו סימוכין.
+
+&lt;&lt;englink [[Hora]]&gt;&gt;
+</pre>
 </div>
 <div created="20171207182155877" modified="20190310131613452" tags="סדרות טלוויזיה" title="הורים במשרה מלאה">
 <pre>[img[pictures/parenthood.jpg]]
