--- a/english.html
+++ b/english.html
@@ -309,6 +309,8 @@ Error message and password prompt
 
 <li>Dandan went</li>
 
+<li>Dangerous</li>
+
 <li>Daniel</li>
 
 <li>David Byrne</li>
@@ -8396,7 +8398,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Dangerous [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8666,7 +8668,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215193742162" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215195417278" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -8926,6 +8928,30 @@ On June, [[Dandan]] went.
 
 
 
+</pre>
+</div>
+<div created="20200215194449951" modified="20200215195435426" tags="[[True stories]]" title="Dangerous">
+<pre>
+[img[pictures/mesookenet.jpg]]
+
+!!![[Alfred]]:
+
+[[Daphne|Daphne Abaroah]], my sister who is four years older than me, is, not less than, a dangerous person.
+ 
+About a year ago, she was released from a five-year hospitalization. She lives in a protected accommodation for mentally ill people in rehabilitation, not far from Paris.
+ 
+When I was nine, one day my [[mom|Marianne]] left our home in a big bang, and hasn't returned since.
+
+We stayed with our [[dad|Jozef Abaroa]], who did the most he could at making our lives better. My sister's condition seemed reasonable, even though she sabotaged any attempt of my dad to get in touch with another woman. She had a special beauty, loud laugh and quite personal charm. She painted. At the age of twenty she got married to David (after separating him from a good friend of hers, whom he lived with for several years).
+
+A year after that she gave birth to sweet Ricky. She couldn't function as a mother. David raised Ricky, and she moved from job to job, friend to friend, lover to lover. She becomes attached to people, and immediately interfere with their lives, prying and interrupting. She separates couples, exploits, comes to houses and takes everything she can, including what's in the refrigerator, clothes, objects. She goes over their computer, doesn't rest- until it explodes in a big boom.
+
+From time to time, my dad is forced to be her [[Mike|https://en.wikipedia.org/wiki/Mike_Ehrmantraut]]. 
+
+Her wickedness is unforgivable and I only suggest- don't mess with the Daphne!!!
+
+
+ &lt;&lt;heblink [[מסוכנת]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215124658821" modified="20200215124822177" tags="[[Coen sister]]" title="Daniel">
