--- a/english.html
+++ b/english.html
@@ -313,6 +313,8 @@ Error message and password prompt
 
 <li>Daniel</li>
 
+<li>Daphne Abaroah</li>
+
 <li>David Byrne</li>
 
 <li>Delicatessen Chez Genevieve</li>
@@ -8398,7 +8400,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Dangerous [[Coen Sisters]]" title="$:/StoryList">
+<div list="Alfred [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8668,7 +8670,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215195417278" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215200305069" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -8958,6 +8960,20 @@ Her wickedness is unforgivable and I only suggest- don't mess with the Daphne!!!
 <pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
 
  &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
+</div>
+<div created="20200215200029039" modified="20200215200338795" tags="[[Single parent children]]" title="Daphne Abaroah">
+<pre>
+[img[pictures/dafni-abaroa.jpg]]
+
+!!![[Alfred]]:
+
+Don't mess with the Daphne.
+She was four-year-old when I was born, and shortly after my birth, my parents noticed that she started walking on the tip of her toes and going wild, meaning, resisting everything, taking everything, constantly screaming. In her childhood and adolescent she was skinny, sportive and attractive, she relatively overcame her &quot;walking disorders&quot;, but she's still [[dangerous|Dangerous]].
+
+ &lt;&lt;heblink [[דפני אברואה]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200213152525438" modified="20200213152745210" tags="Music Films [[Outer sisters]]" title="David Byrne">
 <pre>[img[pictures/david-byrne.jpg]]
