--- a/english.html
+++ b/english.html
@@ -8400,7 +8400,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Alfred [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Daphne Abaroah]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8583,8 +8583,7 @@ coming soon as possible
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
 <div created="20200215154318530" modified="20200215155042112" tags="Mothers [[True stories]]" title="A Fairy Tale's Mother">
-<pre>
-[img[pictures/ima-mehaagadot.jpg]]
+<pre>[img[pictures/ima-mehaagadot.jpg]]
 
 !!![[Angelic]]:
 
@@ -8619,8 +8618,7 @@ With the assistance of the code she has transplanted in my father, in me and in 
 </pre>
 </div>
 <div created="20200215160607509" modified="20200215161321529" tags="[[True stories]] [[Monkeys with car keys]]" title="A Privileged Man">
-<pre>
-[img[pictures/gever-privilegy.jpg]]
+<pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[Yoyo]]:
 
@@ -8671,8 +8669,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 </pre>
 </div>
 <div created="20200215155125827" modified="20200215200305069" tags="[[Coen sister]]" title="Angelic">
-<pre>
-[img[pictures/angelic.jpg]]
+<pre>[img[pictures/angelic.jpg]]
 
 
 
@@ -8933,8 +8930,7 @@ On June, [[Dandan]] went.
 </pre>
 </div>
 <div created="20200215194449951" modified="20200215195435426" tags="[[True stories]]" title="Dangerous">
-<pre>
-[img[pictures/mesookenet.jpg]]
+<pre>[img[pictures/mesookenet.jpg]]
 
 !!![[Alfred]]:
 
@@ -8961,13 +8957,13 @@ Her wickedness is unforgivable and I only suggest- don't mess with the Daphne!!!
 
  &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
 </div>
-<div created="20200215200029039" modified="20200215200338795" tags="[[Single parent children]]" title="Daphne Abaroah">
-<pre>
-[img[pictures/dafni-abaroa.jpg]]
+<div created="20200215200029039" modified="20200215200717111" tags="[[Single parent children]]" title="Daphne Abaroah">
+<pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[Alfred]]:
 
-Don't mess with the Daphne.
+Don't mess with the Daphne
+.
 She was four-year-old when I was born, and shortly after my birth, my parents noticed that she started walking on the tip of her toes and going wild, meaning, resisting everything, taking everything, constantly screaming. In her childhood and adolescent she was skinny, sportive and attractive, she relatively overcame her &quot;walking disorders&quot;, but she's still [[dangerous|Dangerous]].
 
  &lt;&lt;heblink [[דפני אברואה]]&gt;&gt;
@@ -9116,8 +9112,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200215192758642" modified="20200215194208454" tags="[[Iry claims]] [[How many songs can you even invent at all]] Music" title="Hora">
-<pre>
-[img[pictures/hora.jpg]]
+<pre>[img[pictures/hora.jpg]]
 
 !!![[Iry]]:
 
@@ -9299,8 +9294,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200215135425861" modified="20200215135806057" tags="[[Coen sister]]" title="Jozef Abaroa">
-<pre>
-[img[pictures/jozef.jpg]]
+<pre>[img[pictures/jozef.jpg]]
 
 
 
@@ -9337,8 +9331,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200215171950007" modified="20200215172608187" tags="[[True stories]] [[On the road to somewhere]]" title="Life is not About Talking">
-<pre>
-[img[pictures/hachaim-ze-lo.jpg]]
+<pre>[img[pictures/hachaim-ze-lo.jpg]]
 
 !!![[Gura]]:
 
@@ -9366,8 +9359,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 </pre>
 </div>
 <div created="20200215180640097" modified="20200215181032321" tags="Mothers" title="Marianne">
-<pre>
-[img[pictures/marian.jpg]]
+<pre>[img[pictures/marian.jpg]]
 
 !!![[Gura]]:
 
@@ -9488,8 +9480,7 @@ It's difficult for me at this point of life to think about relations.
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
 <div created="20200215184111637" modified="20200215184505280" tags="Mothers [[Here in the Ghetto]] Children [[Single parent children]]" title="Nano and I">
-<pre>
-[img[pictures/nano-ve-ani.jpg]]
+<pre>[img[pictures/nano-ve-ani.jpg]]
 
 !!![[Tomer]]:
 
@@ -9499,8 +9490,7 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
 </pre>
 </div>
 <div created="20200215181227245" modified="20200215182344292" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
-<pre>
-[img[pictures/nechama-vahetzi.jpg]]
+<pre>[img[pictures/nechama-vahetzi.jpg]]
 
 !!![[Tomer]]:
 
@@ -9530,8 +9520,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 </pre>
 </div>
 <div created="20200215161549719" modified="20200215162514105" tags="Children" title="Once">
-<pre>
-!!![[Coen Sisters]]:
+<pre>!!![[Coen Sisters]]:
 ''
 When smoking was permitted''
 
@@ -9620,8 +9609,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 </pre>
 </div>
 <div created="20200215140208543" modified="20200215141026096" tags="Restaurants [[Outer sisters]]" title="Puaa">
-<pre>
-[img[pictures/pooa.jpg]]
+<pre>[img[pictures/pooa.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9636,8 +9624,7 @@ It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.
 </pre>
 </div>
 <div created="20200215185602226" modified="20200215190055653" tags="[[On the road to somewhere]]" title="Public Transportation">
-<pre>
-[img[pictures/tachbura-ziburit.jpg]]
+<pre>[img[pictures/tachbura-ziburit.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9676,8 +9663,7 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
 <div created="20200215173704718" modified="20200215175926497" tags="Mothers [[The Baumans]]" title="RIP Dina">
-<pre>
-[img[pictures/ima-shel-gura.jpg]]
+<pre>[img[pictures/ima-shel-gura.jpg]]
 
 
 !!![[Gura]]:
@@ -9698,8 +9684,7 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
  &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
 </div>
 <div created="20200215171042985" modified="20200215171543170" tags="Once [[Here in the Ghetto]] [[True stories]]" title="Romema">
-<pre>
-[img[pictures/romema.jpg]]
+<pre>[img[pictures/romema.jpg]]
 
 !!![[Tomer]]:
 
@@ -10044,8 +10029,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
 </div>
 <div created="20200215190802119" modified="20200215191412120" tags="[[The Baumans]] Mothers Houses [[I would like to apologize]] [[On the road to somewhere]]" title="We Went to Mom's Memorial">
-<pre>
-[img[pictures/haazkara-shel-ima.jpg]] 
+<pre>[img[pictures/haazkara-shel-ima.jpg]] 
 
 !!![[Gura]]:
 
@@ -10066,8 +10050,7 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
 </pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
-<pre>
-''They used to wave hi to each other''
+<pre>''They used to wave hi to each other''
 
 [img[pictures/nofefoo-leshalom.jpg]].
 
@@ -10091,8 +10074,7 @@ They didn't use seat belts''
 </pre>
 </div>
 <div created="20200215170251235" modified="20200215170432373" tags="Once" title="When there were fewer cars">
-<pre>
-''You could play on the roadway''
+<pre>''You could play on the roadway''
 
 [img[pictures/lesachek-bacvish.jpg]]
 
@@ -10108,8 +10090,7 @@ People used to smoke in them too''
  &lt;&lt;heblink [[כשהיו בתי קולנוע]]&gt;&gt;</pre>
 </div>
 <div created="20200215165851388" modified="20200215170114391" tags="Once" title="When there were narrow and long roads">
-<pre>
-''There was space''
+<pre>''There was space''
 
 [img[pictures/meat-cvishim.jpg]]
 
