--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מסוכנת [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215194704714" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215200551931" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11982,14 +11982,16 @@ different tastes, but there were things we both love: family, work, people in al
 
 אחת הבעיות איתנו הנשים, ויש לא מעט כאלה, היא, שקורה שאנחנו דעתניות.</pre>
 </div>
-<div created="20170225205632304" modified="20170729113137318" tags="[[ילדים חד הוריים]]" title="דפני אברואה">
+<div created="20170225205632304" modified="20200215200621928" tags="[[ילדים חד הוריים]]" title="דפני אברואה">
 <pre>[img[pictures/dafni-abaroa.jpg]]
 
 !!![[אלפרד]]:
 
 אל תתעסקו עם הדפני.
 
-היא הייתה בת ארבע כשנולדתי, וזמן קצר אחרי הולדתי, הורי שמו לב, שהיא החלה ללכת על קצות האצבעות ולהשתולל, כלומר, להתנגד לכל דבר, לקחת כל דבר, לצעוק בלי להפסיק.  בילדותה ונערותה הייתה רזה, ספורטיבית, ומושכת, היא התגברה, יחסית, על &quot;ההפרעת הליכה&quot;, אך נשארה [[מסוכנת]].</pre>
+היא הייתה בת ארבע כשנולדתי, וזמן קצר אחרי הולדתי, הורי שמו לב, שהיא החלה ללכת על קצות האצבעות ולהשתולל, כלומר, להתנגד לכל דבר, לקחת כל דבר, לצעוק בלי להפסיק.  בילדותה ונערותה הייתה רזה, ספורטיבית, ומושכת, היא התגברה, יחסית, על &quot;ההפרעת הליכה&quot;, אך נשארה [[מסוכנת]].
+
+&lt;&lt;englink [[Daphne Abaroah]]&gt;&gt;</pre>
 </div>
 <div created="20170319161219583" modified="20170507181946375" tags="HH" title="האומנית">
 <pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
