--- a/english.html
+++ b/english.html
@@ -339,6 +339,8 @@ Error message and password prompt
 
 <li>Genevieve</li>
 
+<li>Guan-yin</li>
+
 <li>Gura</li>
 
 <li>HaAchim</li>
@@ -8400,7 +8402,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Daphne Abaroah]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Guan-yin [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8668,7 +8670,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215200305069" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215202418439" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -9065,6 +9067,30 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 <pre>[img[pictures/genevieve.jpg]]
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
+</div>
+<div created="20200215201131691" modified="20200215202446389" tags="[[Coen sister]]" title="Guan-yin">
+<pre>
+
+[img[pictures/guen-inn.jpg]]
+
+!!![[Gura]]:
+
+Guan-Yin is a sweet little Chinese, who came to us with the wonderful [[Chinese fifth|The chinese]].
+
+She is a fashion designer and she has a workshop and a [[shop|Guan-yin fashion]], where she designs and sews classical dressmaking patterns with her tuning machine. I've got some skirts of her that I wear a lot, and a jacket that every part of it is made from a different fabric, and is super chic.
+
+In her shop, she occupies few women, inspected by her mother, who was trained in her youth as a sewer in China.
+
+She's one of the lucky fellows who were raised together in a group, who came from China in the seventies, and was a classmate of five of our acquaintances, and also she became one of [[us|Coen Sisters]] in no time.
+
+
+ &lt;&lt;heblink [[גואן יין]]&gt;&gt;
+
+
+.
+
+
+</pre>
 </div>
 <div created="20200202161830591" modified="20200202162556278" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
