--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[גואן יין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215194445702" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215200814244" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215200551931" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215201850593" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11028,7 +11028,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170324140400308" modified="20170619190948234" tags="[[אחות כהן]]" title="גואן יין">
+<div created="20170324140400308" modified="20200215202500065" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
 
 !!![[גורה]]:
@@ -11040,6 +11040,9 @@ Is where I want to be
 בחנות שלה היא מעסיקה כמה נשים עליהן מפקדת אימה, שבצעירותה הוכשרה כתופרת בסין.
 
 גם היא אחת מבני המזל שגדלו יחדיו בקבוצה, שהגיע מסין בשנות השבעים, והייתה בת כיתה של חמשת מיודעינו, וגם היא באפס זמן הפכה [[לאחת מאיתנו|האחיות כהן]].
+
+
+&lt;&lt;englink [[Guan-yin]]&gt;&gt;
 
 </pre>
 </div>
