--- a/english.html
+++ b/english.html
@@ -339,6 +339,8 @@ Error message and password prompt
 
 <li>Genevieve</li>
 
+<li>Guan Fashion</li>
+
 <li>Guan-yin</li>
 
 <li>Gura</li>
@@ -478,6 +480,8 @@ Error message and password prompt
 <li>The blue is already here</li>
 
 <li>The Bridge</li>
+
+<li>The Chinese</li>
 
 <li>The Couscous</li>
 
@@ -8393,7 +8397,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215181549103" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215203739957" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8670,7 +8674,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215202418439" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215203141587" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -9068,16 +9072,25 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
-<div created="20200215201131691" modified="20200215202446389" tags="[[Coen sister]]" title="Guan-yin">
+<div created="20200215203104172" modified="20200215203242855" tags="[[True stories]] Mothers" title="Guan Fashion">
+<pre>
+[img[pictures/guen-inn-mitpara.jpg]]
+
+
+
+ &lt;&lt;heblink [[גואן אופנה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215201131691" modified="20200215203650233" tags="[[Coen sister]]" title="Guan-yin">
 <pre>
 
 [img[pictures/guen-inn.jpg]]
 
 !!![[Gura]]:
 
-Guan-Yin is a sweet little Chinese, who came to us with the wonderful [[Chinese fifth|The chinese]].
+Guan-Yin is a sweet little Chinese, who came to us with the wonderful [[Chinese fifth|The Chinese]].
 
-She is a fashion designer and she has a workshop and a [[shop|Guan-yin fashion]], where she designs and sews classical dressmaking patterns with her tuning machine. I've got some skirts of her that I wear a lot, and a jacket that every part of it is made from a different fabric, and is super chic.
+She is a fashion designer and she has a workshop and a [[shop|Guan Fashion]], where she designs and sews classical dressmaking patterns with her tuning machine. I've got some skirts of her that I wear a lot, and a jacket that every part of it is made from a different fabric, and is super chic.
 
 In her shop, she occupies few women, inspected by her mother, who was trained in her youth as a sewer in China.
 
@@ -9719,12 +9732,12 @@ The building, the strings and what's between them.
  &lt;&lt;heblink [[רוממה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215111759981" modified="20200215115526369" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
+<div created="20200215111759981" modified="20200215203734389" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[Yoyo]]:
 
-Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza balls soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|The end stays open]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
+Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza balls soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|An open ending]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
@@ -9834,6 +9847,15 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 
  &lt;&lt;heblink [[הגשר]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215202733497" modified="20200215202908848" tags="[[Coen sister]]" title="The Chinese">
+<pre>
+[img[pictures/hasinim.jpg]]
+
+ &lt;&lt;heblink [[הסינים]]&gt;&gt;
 
 
 </pre>
