--- a/index.html
+++ b/index.html
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215201850593" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215203326838" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11007,7 +11007,7 @@ Is where I want to be
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20181020120627635" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20200215203429013" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -11026,7 +11026,7 @@ Is where I want to be
 
 הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, [[שהחיים לא קלים|החיים נועדו למי שלא יכול להתמודד עם סמים]].
 
-</pre>
+&lt;&lt;englink [[&lt;&lt;englink [[Angelic]]&gt;&gt;]]&gt;&gt;</pre>
 </div>
 <div created="20170324140400308" modified="20200215202500065" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
@@ -12622,7 +12622,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161112205825183" modified="20171029224334940" title="הסינים">
+<div created="20161112205825183" modified="20200215203003974" tags="[[אחות כהן]]" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
 
 !!![[גורה]]:
@@ -12636,7 +12636,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 את מלאכות הבנייה למדו מאבותיהם, וכך הפכו הם,  לחבורת שיפוצניקים לעילא, שהגיעה אלינו דרך [[ז'נבייב]], דרכה הגענו [[לדירה|כוכב המשאלות 01]].
 
-[[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת השיפוצים והרכישות לדירה, אך הם כולם אחד אחד.</pre>
+[[קואנג]] היה הראשון אליו נקשרתי, הוא זה שהסתובב איתי בתקופת השיפוצים והרכישות לדירה, אך הם כולם אחד אחד.
+
+&lt;&lt;englink [[The Chinese]]&gt;&gt;</pre>
 </div>
 <div created="20170406162100924" modified="20190314144333926" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
