--- a/english.html
+++ b/english.html
@@ -8397,7 +8397,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215203739957" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215205833138" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8406,7 +8406,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Guan-yin [[Coen Sisters]]" title="$:/StoryList">
+<div list="Daniel [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8426,7 +8426,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215191750325" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215205820306" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8958,8 +8958,14 @@ Her wickedness is unforgivable and I only suggest- don't mess with the Daphne!!!
  &lt;&lt;heblink [[מסוכנת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215124658821" modified="20200215124822177" tags="[[Coen sister]]" title="Daniel">
+<div created="20200215124658821" modified="20200215205916254" tags="[[Coen sister]]" title="Daniel">
 <pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
+
+
+!!![[Dandan]]:
+
+I chose to write about Daniel, because he's one of the few people who came from nowhere and got me on the spot. He came with [[Alfred]], of course, to [[the meal|Christmas dinner]], and it was the first time we've met. He's 27, and he finished first degree in psychology two years ago. In this scholar year he started second degree in research psychology. His research is about smoking marijuana and short term memory. Who's if not Alfred, had a chance encounter with him at [[Psychodiagnostic Chirology]] course. An ultimate candidate who admires the [[gan-Ya]]. He's pretty tall, has a nice forelock, brown eyes and a straightening teeth device. He constantly moves inconveniently from one side to the other, but not like [[Yoyo]]. Yoyo is more of a wobbler and Daniel transfers his weight uncomfortably from one leg to the other, and with it the pelvis and the head. He's one of the few that are onto me. Mostly I'm the one who's onto other people, as written in [[Eva's story|9-side-wishing-star]]. He joins Alfred and me many times when we renovate furniture, and he certainly saw exactly what happened to me in New York when I was 17 in [[Finnie's house|Chez Finnie`s]]. He smokes weed only sometimes, and in that day we smoked. [[Cheng]] and he started our [[wiki|Coen Sisters]], allowing each and one of us to fill and create more and more wikis, in the condition that [[Saraleh would have liked it]]. 
+
 
  &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
 </div>
