--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215174801496" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215203805222" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[גואן יין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[גואן אופנה]] דניאל [[כירולוגיה פסיכודיאגנוסטית]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215200814244" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215204109140" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215203326838" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215210247972" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11007,7 +11007,7 @@ Is where I want to be
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20200215203429013" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20200215210326963" tags="[[סיפורים אמיתיים]] אימהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -11026,7 +11026,8 @@ Is where I want to be
 
 הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, [[שהחיים לא קלים|החיים נועדו למי שלא יכול להתמודד עם סמים]].
 
-&lt;&lt;englink [[&lt;&lt;englink [[Angelic]]&gt;&gt;]]&gt;&gt;</pre>
+
+&lt;&lt;englink [[Guan Fashion]]&gt;&gt;</pre>
 </div>
 <div created="20170324140400308" modified="20200215202500065" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
@@ -14099,10 +14100,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[They cut down trees]]&gt;&gt;
 </pre>
 </div>
-<div created="20161115215130799" modified="20170328195040375" title="כירולוגיה פסיכודיאגנוסטית">
+<div created="20161115215130799" modified="20200215210143835" title="כירולוגיה פסיכודיאגנוסטית">
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
-שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
+שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].
+
+&lt;&lt;englink [[Psychodiagnostic Chirology]]&gt;&gt;</pre>
 </div>
 <div created="20171210210308490" modified="20200208130006470" tags="[[קופים ממונעים]] [[בדרך לאן שהוא]]" title="כישורים חברתיים">
 <pre>[img[pictures/kishurim.jpg]]
