--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>Charlie Kaufman</li>
 
+<li>Cheng</li>
+
 <li>Chez Finnie`s</li>
 
 <li>Chez Panisse</li>
@@ -336,6 +338,8 @@ Error message and password prompt
 <li>Films</li>
 
 <li>Food addicts</li>
+
+<li>Gan-Ya</li>
 
 <li>Genevieve</li>
 
@@ -446,6 +450,8 @@ Error message and password prompt
 <li>Pina Bausch</li>
 
 <li>Prince</li>
+
+<li>Psychodiagnostic Chirology</li>
 
 <li>Puaa</li>
 
@@ -8406,7 +8412,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Daniel [[Coen Sisters]]" title="$:/StoryList">
+<div list="Daniel Cheng [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8674,7 +8680,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215203141587" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215211008314" tags="[[Coen sister]]" title="Angelic">
 <pre>[img[pictures/angelic.jpg]]
 
 
@@ -8767,6 +8773,14 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
 
  &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
 . </pre>
+</div>
+<div created="20200215210946983" modified="20200215211037832" tags="[[Coen sister]]" title="Cheng">
+<pre>
+[img[pictures/chang.jpg]]
+
+
+ &lt;&lt;heblink [[צ'נג]]&gt;&gt;
+</pre>
 </div>
 <div created="20200215122951144" modified="20200215124616856" tags="[[Dandan went]] Houses [[Dreams we have dreamt]] Laundry [[True stories]]" title="Chez Finnie`s">
 <pre>!!![[Yoyo]]:
@@ -8958,13 +8972,13 @@ Her wickedness is unforgivable and I only suggest- don't mess with the Daphne!!!
  &lt;&lt;heblink [[מסוכנת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215124658821" modified="20200215205916254" tags="[[Coen sister]]" title="Daniel">
+<div created="20200215124658821" modified="20200215210521336" tags="[[Coen sister]]" title="Daniel">
 <pre>[img[pictures/29wJW52SFPcRk5HR.jpg]]
 
 
 !!![[Dandan]]:
 
-I chose to write about Daniel, because he's one of the few people who came from nowhere and got me on the spot. He came with [[Alfred]], of course, to [[the meal|Christmas dinner]], and it was the first time we've met. He's 27, and he finished first degree in psychology two years ago. In this scholar year he started second degree in research psychology. His research is about smoking marijuana and short term memory. Who's if not Alfred, had a chance encounter with him at [[Psychodiagnostic Chirology]] course. An ultimate candidate who admires the [[gan-Ya]]. He's pretty tall, has a nice forelock, brown eyes and a straightening teeth device. He constantly moves inconveniently from one side to the other, but not like [[Yoyo]]. Yoyo is more of a wobbler and Daniel transfers his weight uncomfortably from one leg to the other, and with it the pelvis and the head. He's one of the few that are onto me. Mostly I'm the one who's onto other people, as written in [[Eva's story|9-side-wishing-star]]. He joins Alfred and me many times when we renovate furniture, and he certainly saw exactly what happened to me in New York when I was 17 in [[Finnie's house|Chez Finnie`s]]. He smokes weed only sometimes, and in that day we smoked. [[Cheng]] and he started our [[wiki|Coen Sisters]], allowing each and one of us to fill and create more and more wikis, in the condition that [[Saraleh would have liked it]]. 
+I chose to write about Daniel, because he's one of the few people who came from nowhere and got me on the spot. He came with [[Alfred]], of course, to [[the meal|Christmas dinner]], and it was the first time we've met. He's 27, and he finished first degree in psychology two years ago. In this scholar year he started second degree in research psychology. His research is about smoking marijuana and short term memory. Who's if not Alfred, had a chance encounter with him at [[Psychodiagnostic Chirology]] course. An ultimate candidate who admires the [[Gan-Ya]]. He's pretty tall, has a nice forelock, brown eyes and a straightening teeth device. He constantly moves inconveniently from one side to the other, but not like [[Yoyo]]. Yoyo is more of a wobbler and Daniel transfers his weight uncomfortably from one leg to the other, and with it the pelvis and the head. He's one of the few that are onto me. Mostly I'm the one who's onto other people, as written in [[Eva's story|9-side-wishing-star]]. He joins Alfred and me many times when we renovate furniture, and he certainly saw exactly what happened to me in New York when I was 17 in [[Finnie's house|Chez Finnie`s]]. He smokes weed only sometimes, and in that day we smoked. [[Cheng]] and he started our [[wiki|Coen Sisters]], allowing each and one of us to fill and create more and more wikis, in the condition that [[Saraleh would have liked it]]. 
 
 
  &lt;&lt;heblink [[דניאל]]&gt;&gt;</pre>
@@ -9071,6 +9085,15 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 &lt;&lt;list-links filter:&quot;[tag[Food addicts]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215210632854" modified="20200215210740484" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
+<pre>
+[img[pictures/gan-ya.jpg]]
+
+ &lt;&lt;heblink [[גן-יה]]&gt;&gt;
+
+
 </pre>
 </div>
 <div created="20200213145354960" modified="20200213152652198" tags="[[Coen sister]] Mothers" title="Genevieve">
@@ -9650,6 +9673,15 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
  &lt;&lt;heblink [[פרינס]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200215210007690" modified="20200215210058148" title="Psychodiagnostic Chirology">
+<pre>
+[img[pictures/yZiEyakkL0F87eQO.JPG]]
+
+
+ &lt;&lt;heblink [[כירולוגיה פסיכודיאגנוסטית]]&gt;&gt;
 
 </pre>
 </div>
