--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[גואן אופנה]] דניאל [[כירולוגיה פסיכודיאגנוסטית]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="צ'נג דניאל [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215204109140" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215211136699" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215210247972" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215211107284" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -11684,7 +11684,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161205195559773" modified="20200208125540813" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר" title="גן-יה">
+<div created="20161205195559773" modified="20200215210836542" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
 
 !!![[יויו]]:
@@ -11701,6 +11701,7 @@ Is where I want to be
 [[החיים נועדו למי שלא יכול להתמודד עם סמים]].
 
 
+&lt;&lt;englink [[Gan-Ya]]&gt;&gt;
 </pre>
 </div>
 <div created="20161024180611154" modified="20180704183354210" tags="HH בתים" title="געזונטהייטס">
@@ -17422,7 +17423,7 @@ Fapina''
 
 לצ'ן יש אופי של חקלאי. הוא משקים קום, הוא אחראי על המשאית הקטנה של [[הסינים]], הוא חזק, חרוץ, ממושמע, נחמד ומצחיק טילים. </pre>
 </div>
-<div created="20170324140059460" modified="20170704123730095" tags="[[אחות כהן]]" title="צ'נג">
+<div created="20170324140059460" modified="20200215211132703" tags="[[אחות כהן]]" title="צ'נג">
 <pre>[img[pictures/chang.jpg]]
 
 !!![[גורה]]:
@@ -17430,7 +17431,11 @@ Fapina''
 [[אירי]] טוענת, שגם צ'נג הוא [[זקוף גו|זקופי הגו]]. צ'נג המפואר עם [[דניאל]] המפואר גם כן, פתחו את האתר הזה.
 
 הוא בן יחיד, הוא מסיים השנה תואר שני בסטטיסטיקה, 
-הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.</pre>
+הוא שולט ברזי המרשתת, הוא מתגורר בדירת חדר שקנה ושיפץ, לא רחוק מאיתנו.
+
+&lt;&lt;englink [[Cheng]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170423212318190" modified="20200215103249447" tags="[[אחיות חוץ]] סרטים" title="צ'רלי קאופמן">
 <pre>[img[pictures/charlie-kaufman.jpg]]
